# manage-agent

./: .deploy.env.example  .env.example  .gitignore  DEMO.md  Makefile  PLAN.md  PROGRESS.md  README.md  RUNNING.md  docker-compose.dev-proxy.yml  docker-compose.fast.yml  docker-compose.host-ports.yml  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .env.production.example  .env.railway.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 9beb066129e4_initial_schema.py  a1b2c3d4e5f6_agent_user_permissions.py  b2c3d4e5f6a7_platform_extras.py  c3d4e5f6a7b8_agent_files.py  d4e5f6a7b8c9_access_requests.py  e5f6a7b8c9d0_agent_kinds.py  f7a8b9c0d1e2_agent_kind_api.py  g8h9i0j1k2l3_agent_kind_spreadsheet.py  h9i0j1k2l3m4_consolidate_agent_kinds.py  i0j1k2l3m4n5_default_model_claude_opus_4_7.py  j1k2l3m4n5o6_platform_settings.py  k2l3m4n5o6p7_default_model_claude_opus_4_8.py  l3m4n5o6p7q8_knowledge_datasets.py  m4n5o6p7q8r9_knowledge_dataset_enrichments.py  n5o6p7q8r9s0_user_phone_address.py  o6p7q8r9s0t1_run_state.py  p7q8r9s0t1u2_autonomy_preferences.py  q1a2b3c4d5e6_platform_skills.py  q2b3c4d5e6f7_failure_ledger.py  q3c4d5e6f7a8_execution_jobs.py  r4d5e6f7a8b9_agent_file_roles.py
backend/assets/karkard/: expected_1405_2.xlsx
backend/formdocs/ب/: کارکرد تست.xlsx  کارکرد توسعه کارآفرینی-2.1405.xlsx
backend/scripts/: docker-entry.sh  e2e_karkard_api.py  e2e_karkard_fresh.py  ensure_catalog_agents.py  ensure_demo_history.py  guard_p0_sandbox.py  live_karkard_api_test.py  refresh_instruction_prompts.py  sandbox_worker.py  sync_platform_skills.py  validate_all_agents.py  verify_agents.py  verify_agents_report.json  verify_karkard_output.py
backend/skills/platform/: wizard.continue-testing.json  wizard.create-full.json  wizard.permissions-default.json  (+1 more)
backend/src/: __init__.py  config.py  logger.py  main.py
backend/tests/: conftest.py  test_agent_action_llm.py  test_agent_capabilities.py  test_auth.py  test_cors.py  test_exception_handlers.py  test_health.py  test_karkard.py  test_karkard_download.py  test_karkard_formdocs.py  test_karkard_locked_input.py  test_karkard_paths.py  test_platform.py  test_support_wizard_flow.py  test_tool_runner.py
cursor-to-api/: Dockerfile  README.md  pyproject.toml  run_karkard_once.py
cursor-to-api/cursor_to_api/: agent_runner.py  config.py  main.py  openai_compat.py  openai_schema.py
cursor-to-api/tests/: test_health.py  test_openai_schema.py
docs/: DEPLOYMENT.md  (+7 more)
(+587 files in other folders)
