[project]
name = "cursor-to-api"
version = "0.1.0"
description = "OpenAI-compatible API for the Cursor agent CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
]

[project.scripts]
cursor-to-api = "cursor_to_api.main:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cursor_to_api*"]
